# toxic-cross-domain

./: .gitignore  README.md  environment.yml  init.sh  pyproject.toml  run_all.sh  setup.sh  update_subtrees.sh
experiments/binary_classification/: bert_cad.json  bert_hatexplain.json  bert_semeval.json  distilbert_cad.json  distilbert_hatexplain.json  distilbert_semeval.json  run.sh
experiments/lexicon/: lexicon_results.csv.bak  run.sh  run_test.sh
experiments/rationale_extraction/: bert_cad.json  bert_hatexplain.json  bert_semeval.json  distilbert_cad.json  distilbert_hatexplain.json  distilbert_semeval.json  run.sh  run_test.sh
experiments/span_detection/: bert.json  bert_cad.json  bert_crf_cad.json  bert_crf_hatexplain.json  bert_crf_semeval.json  bert_hatexplain.json  bert_lstm_crf_cad.json  bert_lstm_crf_hatexplain.json  bert_lstm_crf_semeval.json  bert_semeval.json  run.sh
experiments/span_detection/grid/: bert_cad.json  bert_crf_cad.json  bert_crf_hatexplain.json  bert_crf_semeval.json  bert_hatexplain.json  bert_semeval.json  run.sh  run_test.sh
experiments/span_detection/train/: bert_cad.json  bert_crf_cad.json  bert_crf_hatexplain.json  bert_crf_semeval.json  bert_hatexplain.json  bert_lstm_crf_cad.json  bert_lstm_crf_hatexplain.json  bert_lstm_crf_semeval.json  bert_semeval.json  run.sh
src/toxic_x_dom/: data.py  evaluation.py  results_db.py  schema.sql  utils.py
src/toxic_x_dom/binary_classification/: huggingface.py  linear.py
src/toxic_x_dom/binary_classifiers/: huggingface.py  linear.py
src/toxic_x_dom/lexicon/: grid_search_lexicon.py  (+3 more)
(+10 files in other folders)
